<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/regular_item"
    android:padding="40dp"
    android:orientation="vertical"
    android:animateLayoutChanges="true"
    tools:context="com.gal.firechat.MainActivity">

    <TextView
        android:id="@+id/title"
        android:text="@string/welcome_to_firechat"
        android:textColor="#000"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_marginBottom="30dp"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/email"
        android:textColor="#000"
        android:layout_marginBottom="30dp"
        android:background="#FFF"
        android:textColorHint="#cccccc"
        android:textSize="22sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/password"
        android:textColor="#000"
        android:textColorHint="#cccccc"
        android:background="#FFF"
        android:textSize="22sp"
        android:layout_marginBottom="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:imeOptions="actionSend"
        android:inputType="textPassword"
        android:hint="@string/password" />

    <EditText
        android:visibility="gone"
        android:id="@+id/passwordconfirm"
        android:textColor="#000"
        android:layout_marginBottom="30dp"
        android:background="#FFF"
        android:textColorHint="#cccccc"
        android:imeOptions="actionSend"
        android:textSize="22sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_again"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/send"
        android:text="@string/login"
        android:textColor="#f0f0f0"
        android:textSize="22sp"
        android:layout_marginBottom="30dp"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="22sp"
        android:tag="register"
        android:text="@string/register"
        android:textColor="#000" />

    <TextView
        android:textColor="#000"
        android:visibility="gone"
        android:id="@+id/login"
        android:tag="@string/logintext"
        android:textSize="22sp"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>